# world-of-goo

./: .gitignore  CMakeLists.txt  makefile  readme.md
src/: gooball.c  gooball.h  main.c  util.c  util.h
src/gfx/: convimg.yaml
